Atualização do Curso

--- a/Modulo-1/Desafios/d005/index.html
+++ b/Modulo-1/Desafios/d005/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Minhas redes sociais</h1>
     <h2>Quem sou eu?</h2>
-    <img src="Foto.png" alt="">
+    <img src="Imagens/Foto.png" alt="Foto de Caynam Félix">
     <p>Meu nome é <strong>Caynam Félix</strong> sou estudante, estou no meu último ano da escola, estudo violino e começei os estudos na área de programação.</p>
     <h2>Como falar comigo?</h2>
     <ul>
